--- a/config_filw.json
+++ b/config_filw.json
@@ -1,4 +1,6 @@
 {
+"api_url": "https://exchangerate-api.p.rapidapi.com/rapid/latest/ILS",
+"api_headers":{'x-rapidapi-key': "ebf094a0afmsh86dbd082348c8fbp1257c1jsn804e9bce8ec6", 'x-rapidapi-host': "exchangerate-api.p.rapidapi.com"}
 "url_address_pattern": "https://www.ebay.com/sch/i.html?_from=R40&_nkw={}&_sacat=0&LH_TitleDesc=0&_pgn=1", 
 "queries": {"insert_to_products": """INSERT INTO products (seller_id, category_id, country_id, condition_id, product_name, product_price, 
         shipping_fee, page_number) VALUES ({}, {}, {}, {}, {}, {},  
@@ -18,4 +20,4 @@
         "get_condition_id": """SELECT * FROM conditions WHERE product_condition = {}"""
          }, 
 "tags": {"sel_name_tag": "span","sel_name_class": "mbg-nw", "seller_tag": "div", "seller_class": "mbg vi-VR-margBtm3", "category_tag": "span", "category_itemprop": "name", "score_tag": "span", "score_class": "mbg-l", "pos_pct_tag": "div", "pos_pct_class": "perctg", "title_tag": "h1", "title_class": "it-ttl", "price_tag": "span", "price_id": "convbidPrice", "location_tag": "div", "location_class": "iti-eu-bld-gry", "shipment_tag": "span", "shipment_class": "sh-svc sh-nwr", "freeship_tag": "span", "freeship_class": "notranslate sh-fr-cst", "condition_tag": "div", "condition_class": "u-flL condText", "title_torm_tag": "span", "title_torm_class": "g-hdn", "each_product_tag": "li", "each_product_class": "s-item", "link_tag": "a", "link_class": "href"}, 
-"constants": {"PRICE_ONLY": 1, "TO_DELETE": 1, "COUNTRY": -1, "FIRST_PAGE": 2, "PAGE_NO": -1,"NAME_ELEM":0,"PRICE_ELEM":1,"COUNTRY_ELEM":2,"SHIPMENT_ELEM":3,"CONDITION_ELEM":4,"CATEGORY_ELEM":5}}
+"constants": {"COUNTRY": 1, "CURRENCY": 2, "PRICE_ONLY": 1, "TO_DELETE": 1, "COUNTRY": -1, "FIRST_PAGE": 2, "PAGE_NO": -1,"NAME_ELEM":0,"PRICE_ELEM":1,"COUNTRY_ELEM":2,"SHIPMENT_ELEM":3,"CONDITION_ELEM":4,"CATEGORY_ELEM":5}}
