--- a/.gitignore
+++ b/.gitignore
@@ -7,28 +7,22 @@ config_dict = {"urls": {"api_url": "https://exchangerate-api.p.rapidapi.com/rapi
                         "url_address_pattern": "https://www.ebay.com/sch/i.html?_from=R40&_nkw={"
                                                "}&_sacat=0&LH_TitleDesc=0&_pgn=1"},
                "queries": {
-                   "insert_to_currency": "INSERT INTO currency (product_id, Israeli_Shekel_ILS, US_Dollar_USD, "
-                                         "EU_Euro_EUR, GB_Pound_GBP, China_Yoan_CNY, Russia_Ruble_RUB) VALUES ({}, "
-                                         "{}, {}, "
-                                         "{}, {}, {}, {}));",
-                   "insert_to_products": """INSERT INTO products (seller_id, category_id, country_id, condition_id,
-                   product_name, product_price, shipping_fee, page_number) VALUES ({}, {}, {}, {}, {}, {},  {},
-                   {}) WHERE NOT EXISTS (SELECT product_name, product_price, page_number FROM products WHERE
-                   product_name = {} AND product_price = {} AND page_number = {});""",
-                   "insert_to_sellers": "INSERT INTO sellers (seller_name, seller_feedback_score) VALUES ({}, "
-                                        "{}) WHERE NOT EXISTS (SELECT seller_name FROM sellers WHERE seller_name = {"
-                                        "});",
-                   "insert_to_categories": "INSERT INTO categories (category) VALUES ({}) WHERE NOT EXISTS (SELECT "
-                                           "category FROM categories WHERE category = {});",
-                   "insert_to_countries": "INSERT INTO countries (origin_country) VALUES ({}) WHERE NOT EXISTS ("
-                                          "SELECT origin_country FROM categories WHERE origin_country = {});",
-                   "insert_to_conditions": "INSERT INTO conditions (product_condition) VALUES ({}) WHERE NOT EXISTS ( "
-                                           "SELECT product_condition FROM conditions WHERE product_condition = {});",
-                   "get_seller_id": "SELECT * FROM sellers WHERE seller_name = {}",
-                   "get_category_id": "SELECT * FROM categories WHERE category = {}",
-                   "get_country_id": "SELECT * FROM countries WHERE origin_country = {}",
-                   "get_product_id": "SELECT * FROM products WHERE product_name = {} AND seller_id = {}",
-                   "get_condition_id": "SELECT * FROM conditions WHERE product_condition = {}"
+                   "insert_to_currency": """INSERT INTO currency (product_id, Israeli_Shekel_ILS, US_Dollar_USD,
+                                         EU_Euro_EUR, GB_Pound_GBP, China_Yoan_CNY, Russia_Ruble_RUB)
+                                         VALUES ({}, {:.3f}, {:.3f}, {:.3f}, {:.3f}, {:.3f}, {:.3f});""",
+                   "insert_to_products": """INSERT IGNORE INTO products (seller_id, category_id, country_id,
+                   condition_id, product_name, product_price, shipping_fee, page_number)
+                   VALUES ({}, {}, {}, {}, '{}', {:.3f},  {:.3f}, {});""",
+                   "insert_to_sellers": """INSERT IGNORE INTO sellers (seller_name, seller_feedback_score) VALUES ('{}',
+                                        {});""",
+                   "insert_to_categories": """INSERT IGNORE INTO categories (category) VALUES ('{}');""",
+                   "insert_to_countries": """INSERT IGNORE INTO countries (origin_country) VALUES ('{}');""",
+                   "insert_to_conditions": """INSERT IGNORE INTO conditions (product_condition) VALUES ('{}');""",
+                   "get_seller_id": """SELECT * FROM sellers WHERE seller_name = '{}'""",
+                   "get_category_id": """SELECT * FROM categories WHERE category = '{}'""",
+                   "get_country_id": """SELECT * FROM countries WHERE origin_country = '{}'""",
+                   "get_product_id": """SELECT * FROM products WHERE product_name = '{}' AND seller_id = {}""",
+                   "get_condition_id": """SELECT * FROM conditions WHERE product_condition = '{}'"""
                    },
                "tags": {"sel_name_tag": "span", "sel_name_class": "mbg-nw", "seller_tag": "div",
                         "seller_class": "mbg vi-VR-margBtm3", "category_tag": "span", "category_itemprop": "name",
@@ -41,7 +35,7 @@ config_dict = {"urls": {"api_url": "https://exchangerate-api.p.rapidapi.com/rapi
                         "title_torm_class": "g-hdn", "each_product_tag": "li", "each_product_class": "s-item",
                         "link_tag": "a", "link_class": "href"
                         },
-               "constants": {"FROM": 1, "CURRENCY": 2, "PRICE_ONLY": 1, "TO_DELETE": 1, "COUNTRY": -1, "FIRST_PAGE": 2,
+               "constants": {"FROM": 0, "CURRENCY": 1, "PRICE_ONLY": 1, "TO_DELETE": 1, "COUNTRY": -1, "FIRST_PAGE": 2,
                              "PAGE_NO": -1, "NAME_ELEM": 0, "PRICE_ELEM": 1, "COUNTRY_ELEM": 2,
                              "SHIPMENT_ELEM": 3, "CONDITION_ELEM": 4, "CATEGORY_ELEM": 5, "ITEM_DATA": 0,
                              "SELLER_NAME": 1, "SELLER_SCORE": 2, "SUCCESS": 200
