--- a/.gitignore
+++ b/.gitignore
@@ -9,20 +9,22 @@ config_dict = {"urls": {"api_url": "https://exchangerate-api.p.rapidapi.com/rapi
                "queries": {
                    "insert_to_currency": """INSERT INTO currency (product_id, Israeli_Shekel_ILS, US_Dollar_USD,
                                          EU_Euro_EUR, GB_Pound_GBP, China_Yoan_CNY, Russia_Ruble_RUB)
-                                         VALUES ({}, {}, {}, {}, {}, {}, {});""",
-                   "insert_to_products": """INSERT IGNORE INTO products (seller_id, category_id, country_id,
-                   condition_id, product_name, product_price, shipping_fee, page_number)
-                   VALUES ({}, {}, {}, {}, '{}', {},  {}, {});""",
-                   "insert_to_sellers": """INSERT IGNORE INTO sellers (seller_name, seller_feedback_score) VALUES ('{}',
-                                        {});""",
-                   "insert_to_categories": """INSERT IGNORE INTO categories (category) VALUES ('{}');""",
-                   "insert_to_countries": """INSERT IGNORE INTO countries (origin_country) VALUES ('{}');""",
-                   "insert_to_conditions": """INSERT IGNORE INTO conditions (product_condition) VALUES ('{}');""",
-                   "get_seller_id": """SELECT * FROM sellers WHERE seller_name = '{}'""",
-                   "get_category_id": """SELECT * FROM categories WHERE category = '{}'""",
-                   "get_country_id": """SELECT * FROM countries WHERE origin_country = '{}'""",
-                   "get_product_id": """SELECT * FROM products WHERE product_name = '{}' AND seller_id = {}""",
-                   "get_condition_id": """SELECT * FROM conditions WHERE product_condition = '{}'"""
+                                         VALUES (%d, %f, %f, %f, %f, %f, %f);""",
+                   "insert_to_products": """INSERT INTO products (seller_id, category_id, country_id,
+                                         condition_id, product_name, product_price, shipping_fee, page_number)
+                                         VALUES (%d, %d, %d, %d, '%s', %f,  %f, %d);""",
+                   "insert_to_sellers": """INSERT INTO sellers (seller_name, seller_feedback_score)
+                                        VALUES ('%s', %d);""",
+                   "insert_to_categories": """INSERT INTO categories (category) VALUES ('%s');""",
+                   "insert_to_countries": """INSERT INTO countries (origin_country) VALUES ('%s');""",
+                   "insert_to_conditions": """INSERT INTO conditions (product_condition) VALUES ('%s');""",
+                   "get_seller_id": """SELECT * FROM sellers WHERE seller_name = '%s'""",
+                   "get_category_id": """SELECT * FROM categories WHERE category = '%s'""",
+                   "get_country_id": """SELECT * FROM countries WHERE origin_country = '%s'""",
+                   "get_product_id": """SELECT * FROM products WHERE product_name = '%s' AND seller_id = %d""",
+                   "get_condition_id": """SELECT * FROM conditions WHERE product_condition = '%s'""",
+                   "get_prod_and_sel_name": """SELECT product_name, seller_name FROM products JOIN sellers ON
+                   products.seller_id = sellers.seller_id"""
                    },
                "tags": {"sel_name_tag": "span", "sel_name_class": "mbg-nw", "seller_tag": "div",
                         "seller_class": "mbg vi-VR-margBtm3", "category_tag": "span", "category_itemprop": "name",
